--- a/Laboratorio4/package.json
+++ b/Laboratorio4/package.json
@@ -15,8 +15,11 @@
     "@babel/preset-env": "^7.25.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
