--- a/Laboratorio4/package.json
+++ b/Laboratorio4/package.json
@@ -21,6 +21,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.30.1",
     "mongoose": "^8.5.4",
+    "mongoose-paginate-v2": "^1.8.5",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "validator": "^13.12.0"
